--- a/02-Homework/JADYHomework2/style.css
+++ b/02-Homework/JADYHomework2/style.css
@@ -1,7 +1,7 @@
-style {
-    background-color: tomato;
-}
-
 img {
     max-width: 100%;
 }
+
+body {
+    background-image: url("https://envato-shoebox-0.imgix.net/40a7/366e-ec6f-4189-89c1-c3ab9cea4805/1-05147.jpg?auto=compress%2Cformat&fit=max&mark=https%3A%2F%2Felements-assets.envato.com%2Fstatic%2Fwatermark2.png&markalign=center%2Cmiddle&markalpha=18&w=1600&s=a685a87e4250fb52ff6ade2d9320afba");g
+    }
