added pictured in portfolio, updated contact file with a submit button and cleaned it up.

--- a/style.css
+++ b/style.css
@@ -11,3 +11,16 @@ h1 {
 #bioText {
     color: white;
 }
+#name {
+    color: white;
+}
+#email {
+    color: white;
+}
+#message {
+    color: white;
+} 
+h2 {
+    color: white;
+    text-align: center;
+}
